# math_game

./: README.md
client/: CMakeLists.txt  Makefile  README.md  connectsock.c  gameclient.c  readwrite.c
common/: readwrite.h  socket.h
proto/: CMakeLists.txt  install_module.sh.in  round.proto  setup.py.in  stats.proto  test.cpp  user.proto
scripts/: check_running_script.sh  fill.py  tables.txt
server/: CMakeLists.txt  Makefile  README.md  gameserver.c  passivesock.c  queryFile.c  readwrite.c
